==> Mongdin/Little_Button/Helmet-Mongdin/RF24.cpp <==
#include "RF24.h"

bool RF24::begin (void)
{
    // Initialize pins
    // pinMode(ce_pin,OUTPUT);
    // pinMode(csn_pin,OUTPUT);
    // Initialize spi bus
    //spi.begin();
    mainTimer.start();

    ce(LOW);
    csn(HIGH);

    // Must allow the radio time to settle else configuration bits will not necessarily stick.
    // This is actually only required following power up but some settling time also appears to
    // be required after resets too. For full coverage, we'll always assume the worst.
    // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
    // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
    // WARNING: wait_ms is based on P-variant whereby non-P *may* require different timing.
    wait_ms(5);

    // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
    // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
    // sizes must never be used. See documentation for a more complete explanation.
    write_register(SETUP_RETR, (4 << ARD) | (15 << ARC));

    // Test whether setPALevel works.
    setPALevel(RF24_PA_MIN);
    if (getPALevel() != RF24_PA_MIN)
        return false;   // Something went wrog. Check whether nRF24L01 is connected.

    // Restore our default PA level
    setPALevel(RF24_PA_MAX);

    // Determine if this is a p or non-p RF24 module and then
    // reset our data rate back to default value. This works
    // because a non-P variant won't allow the data rate to
    // be set to 250Kbps.
    if (setDataRate(RF24_250KBPS))
    {
        p_variant = true;
    }
    // Then set the data rate to the slowest (and most reliable) speed supported by all
    // hardware.
    setDataRate(RF24_1MBPS);

    // Initialize CRC and request 2-byte (16bit) CRC
    setCRCLength(RF24_CRC_16);

    // Disable dynamic payloads, to match dynamic_payloads_enabled setting
    write_register(DYNPD, 0);

    // Reset current status
    // Notice reset and flush is the last thing we do
    write_register(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

    // Set up default configuration.  Callers can always change it later.
    // This channel should be universally safe and not bleed over into adjacent
    // spectrum.
    setChannel(76);

    //setChannel(90);
    // Flush buffers
    flush_rx();
    flush_tx();

    // set EN_RXADDRR to 0 to prevent pipe 0 and pipe 1 from receiving
    write_register(EN_RXADDR, 0);
    
    return true;
}

void RF24::startListening(void)
{
    write_register(CONFIG, read_register(CONFIG) | _BV(PWR_UP) | _BV(PRIM_RX));
    write_register(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

    // Restore the pipe0 adddress, if exists
    if (pipe0_reading_address)
        write_register(RX_ADDR_P0, reinterpret_cast < const uint8_t * > (&pipe0_reading_address), 5);

    // Flush buffers
    flush_rx();
    flush_tx();

    // Go!
    ce(HIGH);

    // wait for the radio to come up
    wait_us(130);
}

void RF24::startWrite(const void* buf, uint8_t len)
{
    // Transmitter power-up

    write_register(CONFIG, (read_register(CONFIG) | _BV(PWR_UP)) &~_BV(PRIM_RX));
    wait_us(130);

    // Send the payload
    write_payload(buf, len);

    ce(HIGH);
    wait_us(15);
    ce(LOW);
}
